fix: increase 404 font size on mobile

--- a/app/not-found.module.css
+++ b/app/not-found.module.css
@@ -136,9 +136,9 @@
 
 @media (max-width: 768px) {
     .title {
-        font-size: 100px;
-        line-height: 100px;
-        height: 100px;
+        font-size: 145px;
+        line-height: 145px;
+        height: 145px;
     }
 }
 
